<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.auth.SignupFragment"
    android:id="@+id/signup_fragment">

    <ImageView
        android:id="@+id/title_img_tedd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/title_ted_ed"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_title_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_sign_up"
        android:textStyle="bold"
        android:textSize="24sp"
        android:alpha="0"
        tools:alpha="1"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
        app:srcCompat="@drawable/image_signup" />

    <TextView
        android:id="@+id/tv_title_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_username"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_registration"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_username">

        <com.miftah.mysubmissionintermediate.core.ui.view.CustomEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:alpha="0"
            tools:alpha="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_email"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameEditTextLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_email">

        <com.miftah.mysubmissionintermediate.core.ui.view.EmailEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:alpha="0"
            tools:alpha="1"
            android:drawableStart="@drawable/baseline_email_24"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_title_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_password"
        android:alpha="0"
        tools:alpha="1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_password">

    <com.miftah.mysubmissionintermediate.core.ui.view.PasswordEditText
        android:id="@+id/ed_register_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:inputType="textPassword"
        android:alpha="0"
        tools:alpha="1"
        android:drawableStart="@drawable/baseline_lock_24"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.miftah.mysubmissionintermediate.core.ui.view.MyButton
        android:id="@+id/btn_register_signup"
        android:layout_width="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/title_sign_up"
        android:enabled="false"
        android:alpha="0"
        tools:alpha="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>